Fixed incorrect redirect after register bug. Updated nav bar to prevent it from separating from the sidebar when the content overflows.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -16,6 +16,7 @@
  * Hide default border to remove 1px line.
  */
 .navbar-fixed-top {
+
   border: 0;
 }
 
@@ -40,6 +41,7 @@
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
+    padding-top: 52px;
   }
 }
 
@@ -67,6 +69,7 @@
 
 .main {
   padding: 20px;
+  margin-top: 50px;
 }
 @media (min-width: 768px) {
   .main {
